# Weekly-trend

./: .editorconfig  .env.example  .gitignore  README.md  feed.xml  package.json  pnpm-lock.yaml  pyproject.toml  skillink.config.ts  skills-lock.json  test_single.py
.agents/skills/file-line-audit/scripts/: line-audit-darwin-amd64  line-audit-darwin-arm64  line-audit-linux-amd64  line-audit-linux-arm64
.github/workflows/: weekly.yml
cache/: enrich.json  vision.json
docs/: PRD.md
reports/: index.json
reports/2026_06_22/: README.md
reports/2026_06_29/: README.md  report.json
reports/2026_07_06/: README.md  report.json
reports/2026_07_13/: README.md  report.json
reports/2026_07_20/: README.md  report.json
scripts/: build_index.py  build_manifest.py
src/: cache.py  llm.py  log.py  main.py
src/graph/: build.py  state.py
src/graph/nodes/: crawler.py  enrich.py  filter_images.py  generate_report.py  output_report.py
